--- a/index.html
+++ b/index.html
@@ -36,28 +36,9 @@
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
-	#Path_2 {
-		fill: rgba(159,95,95,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Path_2 {
-		overflow: visible;
-		position: absolute;
-		width: 715.776px;
-		height: 922.185px;
-		transform: matrix(1,0,0,1,-297.2254,78.9074) rotate(-66deg);
-		transform-origin: center;
-		left: 0px;
-		top: 0px;
-	}
 	#Path_1 {
-		fill: rgba(159,95,95,1);
-		stroke: rgba(112,112,112,1);
+		fill: rgba(135,0,0,1);
+		stroke: rgba(112,112,112,0);
 		stroke-width: 1px;
 		stroke-linejoin: miter;
 		stroke-linecap: butt;
@@ -67,180 +48,12 @@
 	.Path_1 {
 		overflow: visible;
 		position: absolute;
-		width: 715.776px;
-		height: 922.185px;
-		transform: matrix(1,0,0,1,1511.7745,261.194) rotate(-4deg);
+		width: 617.418px;
+		height: 436.838px;
+		transform: matrix(1,0,0,1,640.6109,341.8009) rotate(-1deg);
 		transform-origin: center;
 		left: 0px;
 		top: 0px;
-	}
-	#Group_1 {
-		position: absolute;
-		width: 246px;
-		height: 93px;
-		left: 837px;
-		top: 494px;
-		overflow: visible;
-	}
-	#Rectangle_2 {
-		fill: rgba(159,42,42,0.78);
-		stroke: rgba(112,112,112,0);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Rectangle_2 {
-		position: absolute;
-		overflow: visible;
-		width: 246px;
-		height: 93px;
-		left: 0px;
-		top: 0px;
-	}
-	#ENTER {
-		left: 52px;
-		top: 16px;
-		position: absolute;
-		overflow: visible;
-		width: 144px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Segoe UI;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 46px;
-		color: rgba(255,255,255,1);
-	}
-	#Component_2__1 {
-		position: absolute;
-		width: 314px;
-		height: 308px;
-		left: 1199px;
-		top: 115px;
-		overflow: visible;
-	}
-	#Ellipse_1 {
-		fill: rgba(64,161,159,1);
-		stroke: rgba(255,0,0,1);
-		stroke-width: 7px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Ellipse_1 {
-		position: absolute;
-		overflow: visible;
-		width: 314px;
-		height: 308px;
-		left: 0px;
-		top: 0px;
-	}
-	#Ellipse_2 {
-		fill: rgba(255,255,255,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Ellipse_2 {
-		position: absolute;
-		overflow: visible;
-		width: 170px;
-		height: 566px;
-		left: 61px;
-		top: -168px;
-	}
-	#Ellipse_3 {
-		fill: rgba(255,255,255,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Ellipse_3 {
-		position: absolute;
-		overflow: visible;
-		width: 482px;
-		height: 233px;
-		left: 154px;
-		top: 471px;
-	}
-	#Ellipse_4 {
-		fill: rgba(255,255,255,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Ellipse_4 {
-		position: absolute;
-		overflow: visible;
-		width: 230px;
-		height: 231px;
-		left: 165px;
-		top: 263px;
-	}
-	#Rectangle_3 {
-		fill: rgba(255,255,255,1);
-		stroke: rgba(112,112,112,1);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Rectangle_3 {
-		position: absolute;
-		overflow: visible;
-		width: 268px;
-		height: 329px;
-		left: 636px;
-		top: 80px;
-	}
-	#Rectangle_4 {
-		fill: rgba(94,255,0,1);
-		stroke: rgba(255,0,0,0);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Rectangle_4 {
-		filter: drop-shadow(0px 3px 6px rgba(255, 0, 0, 1));
-		position: absolute;
-		overflow: visible;
-		width: 276px;
-		height: 459px;
-		left: 1199px;
-		top: 557px;
-	}
-	#Rectangle_5 {
-		fill: rgba(94,255,0,1);
-		stroke: rgba(255,0,0,0);
-		stroke-width: 1px;
-		stroke-linejoin: miter;
-		stroke-linecap: butt;
-		stroke-miterlimit: 4;
-		shape-rendering: auto;
-	}
-	.Rectangle_5 {
-		filter: drop-shadow(0px 3px 16px rgba(255, 0, 0, 1));
-		position: absolute;
-		overflow: visible;
-		width: 306px;
-		height: 489px;
-		left: 904px;
-		top: 557px;
 	}
 </style>
 <script id="applicationScript">
@@ -3151,52 +2964,9 @@ window.application = new Application();
 </head>
 <body>
 <div id="Web_1920__1">
-	<svg class="Path_2" viewBox="1759.072 609.139 715.776 922.185">
-		<path id="Path_2" d="M 2463.02197265625 809.196044921875 L 2463.02197265625 809.196044921875 C 2463.02197265625 809.196044921875 2182.14208984375 1827.51025390625 1958.035522460938 1445.642333984375 C 1733.928833007812 1063.7744140625 1680.143676757812 1047.86328125 1895.285766601562 930.1207275390625 C 2110.427734375 812.378173828125 1958.035766601562 506.8838500976562 2253.85595703125 643.7198486328125 C 2549.67626953125 780.555908203125 2463.02197265625 809.196044921875 2463.02197265625 809.196044921875 Z">
+	<svg class="Path_1" viewBox="2246.354 480.569 617.418 436.838">
+		<path id="Path_1" d="M 2369.0595703125 599.653564453125 C 2211.31982421875 749.3359375 2220.78466796875 769.6632690429688 2312.2734375 797.3822021484375 C 2403.76171875 825.1011352539062 2444.7744140625 967.391845703125 2627.751953125 899.0183715820312 C 2810.7294921875 830.6448974609375 2924.30224609375 723.4649658203125 2829.658203125 668.0270385742188 C 2735.0146484375 612.589111328125 2766.5625 468.4504089355469 2627.751953125 481.3859558105469 C 2488.94140625 494.3215026855469 2369.0595703125 599.653564453125 2369.0595703125 599.653564453125 Z">
 		</path>
-	</svg>
-	<svg class="Path_1" viewBox="1759.072 609.139 715.776 922.185">
-		<path id="Path_1" d="M 2463.02197265625 809.196044921875 L 2463.02197265625 809.196044921875 C 2463.02197265625 809.196044921875 2182.14208984375 1827.51025390625 1958.035522460938 1445.642333984375 C 1733.928833007812 1063.7744140625 1680.143676757812 1047.86328125 1895.285766601562 930.1207275390625 C 2110.427734375 812.378173828125 1958.035766601562 506.8838500976562 2253.85595703125 643.7198486328125 C 2549.67626953125 780.555908203125 2463.02197265625 809.196044921875 2463.02197265625 809.196044921875 Z">
-		</path>
-	</svg>
-	<div id="Group_1">
-		<svg class="Rectangle_2">
-			<rect id="Rectangle_2" rx="46.5" ry="46.5" x="0" y="0" width="246" height="93">
-			</rect>
-		</svg>
-		<div id="ENTER">
-			<span>ENTER</span>
-		</div>
-	</div>
-	<div id="Component_2__1" class="Component_2___1">
-		<svg class="Ellipse_1">
-			<ellipse id="Ellipse_1" rx="157" ry="154" cx="157" cy="154">
-			</ellipse>
-		</svg>
-	</div>
-	<svg class="Ellipse_2">
-		<ellipse id="Ellipse_2" rx="85" ry="283" cx="85" cy="283">
-		</ellipse>
-	</svg>
-	<svg class="Ellipse_3">
-		<ellipse id="Ellipse_3" rx="241" ry="116.5" cx="241" cy="116.5">
-		</ellipse>
-	</svg>
-	<svg class="Ellipse_4">
-		<ellipse id="Ellipse_4" rx="115" ry="115.5" cx="115" cy="115.5">
-		</ellipse>
-	</svg>
-	<svg class="Rectangle_3">
-		<rect id="Rectangle_3" rx="0" ry="0" x="0" y="0" width="268" height="329">
-		</rect>
-	</svg>
-	<svg class="Rectangle_4">
-		<rect id="Rectangle_4" rx="66" ry="66" x="0" y="0" width="258" height="441">
-		</rect>
-	</svg>
-	<svg class="Rectangle_5">
-		<rect id="Rectangle_5" rx="66" ry="66" x="0" y="0" width="258" height="441">
-		</rect>
 	</svg>
 </div>
 </body>
